# samara

./: Cargo.toml
crates/signals/: Cargo.toml  README.md
crates/signals/benches/: propagate.rs
crates/signals/examples/: propagate.rs
crates/signals/src/: computed.rs  context.rs  effect.rs  flags.rs  future.rs  lib.rs  runtime.rs  scope.rs  signal.rs  system.rs  types.rs
crates/signals/src/runtime/: executor.rs
crates/signals/src/system/: batching.rs  computed.rs  context.rs  effect.rs  lifecycle.rs  links.rs  propagation.rs  signal.rs
crates/signals/src/types/: refcell.rs  slotmap.rs
crates/signals/tests/: async.rs  batch.rs  borrow_checking.rs  cleanup.rs  computed.rs  context.rs  count.rs  effect.rs  effect_scope.rs  guard_validity.rs  leak.rs  nested_effect_cleanup.rs  scope_util.rs  signal.rs  topology.rs  trigger.rs  untrack.rs
